12.nov. (lv)
      - export of MusicXML <metronome>
9.nov. (lv)
      - fix import of MusicXML <sound tempo="...">
       (ws)
      - fix: drum palette crashes program on non-drum parts
      - autosave on is now the default in preferences
      - new autosave implementation: save into temporary files, not into
        original files. This also works for the buildin demo file and new
        created scores.
8.nov. (lv)
      - import of MusicXML <metronome>
       (ws)
      - fix position of articulation element for staff displaced notes
7.nov. (ws)
      - fix: tuplets in note entry mode
      - fix: grace notes don't transpose
      - layout: remove accidental, if two notes share the same note head
      (og)
	- exportly: lyrics. Works at least on demo adeste. several bugfixes.
6.nov. (ws)
      - cross beam layout fix
      - fix: D.S. ignored if inside a repeated section
      - fix crash when removing key signature when there is only one
      - fix layout of measure repeat
      - measure repeat symbol was not drawn in palette
      - note spacing function reimplemented; simpler and hopefully faster
        and more flexible
      (db)
      - fix file extensions in startup score dialog
      - minor grammar changes
5.nov. (ws)
      - optimize spacing of special case: triplets with notes moved to
        a different staff (as seen in example prelude-sr)
4.nov. (ws)
      - change sorting of shortcuts
      - fix cursor height for systems with hidden staves
      - Fix score->pos2measure(): did not work with hidden staves.
        In prelude-sr.mscx example it was not possible to drag dynamics
        to the second staff;
2.nov. (lv)
      - new testfile testTempo1.xml
       (ws)
      - allow change of text properties for staff text
      - implement palette cell properties dialog
      - implement "delete palette entry"
      - script extensions: cursor.isRest(), cursor.rest()
      - fix: tie after accidental creates wrong pitch note