@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<museScore version="1.11">
-  <Mag>0.985545</Mag>
-  <xoff>-1.82205</xoff>
-  <yoff>-7.17919</yoff>
+<museScore version="1.12">
+  <Mag>1.74595</Mag>
+  <xoff>-4.13756</xoff>
+  <yoff>-27.2739</yoff>
   <Spatium>1.5</Spatium>
   <Division>480</Division>
   <Style>
@@ -65,6 +65,8 @@ p, li { white-space: pre-wrap; }
       </shortName>
     <Instrument>
       <Channel name="normal">
+        <controller ctrl="0" value="0"/>
+        <controller ctrl="32" value="0"/>
         <program value="0"/>
         <controller ctrl="7" value="100"/>
         <controller ctrl="10" value="60"/>
@@ -78,7 +80,7 @@ p, li { white-space: pre-wrap; }
     </Slur>
   <Staff id="1">
     <VBox>
-      <height>10</height>
+      <height>14.0645</height>
       <leftMargin>5</leftMargin>
       <rightMargin>5</rightMargin>
       <topMargin>5</topMargin>
@@ -86,88 +88,172 @@ p, li { white-space: pre-wrap; }
       <Text>
         <subtype>Title</subtype>
         <style>2</style>
-        <text>Test 3</text>
+        <html-data>
+<html><head><meta name="qrichtext" content="1" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><style type="text/css">
+p, li { white-space: pre-wrap; }
+</style></head><body style=" font-family:'Times New Roman'; font-size:24pt; font-weight:400; font-style:normal;">
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Test 3</p></body></html>
+          </html-data>
         </Text>
       <Text>
         <subtype>Subtitle</subtype>
         <style>3</style>
-        <text>Displaced note heads</text>
+        <html-data>
+<html><head><meta name="qrichtext" content="1" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><style type="text/css">
+p, li { white-space: pre-wrap; }
+</style></head><body style=" font-family:'Times New Roman'; font-size:14pt; font-weight:400; font-style:normal;">
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Displaced note heads</p></body></html>
+          </html-data>
         </Text>
       <Text>
         <subtype>Composer</subtype>
         <style>4</style>
-        <text>Werner Schweer</text>
+        <html-data>
+<html><head><meta name="qrichtext" content="1" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><style type="text/css">
+p, li { white-space: pre-wrap; }
+</style></head><body style=" font-family:'Times New Roman'; font-size:12pt; font-weight:400; font-style:normal;">
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Werner Schweer</p></body></html>
+          </html-data>
         </Text>
       </VBox>
     <Measure number="1">
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="59" tpc="19"/>
-        <Note pitch="60" tpc="14"/>
-        <Note pitch="64" tpc="18"/>
-        <Note pitch="67" tpc="15"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>59</pitch>
+          <tpc>19</tpc>
+          </Note>
+        <Note>
+          <pitch>60</pitch>
+          <tpc>14</tpc>
+          </Note>
+        <Note>
+          <pitch>64</pitch>
+          <tpc>18</tpc>
+          </Note>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="60" tpc="26"/>
-        <Note pitch="61" tpc="21"/>
-        <Note pitch="64" tpc="18"/>
-        <Note pitch="67" tpc="15"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>60</pitch>
+          <tpc>26</tpc>
+          </Note>
+        <Note>
+          <pitch>61</pitch>
+          <tpc>21</tpc>
+          </Note>
+        <Note>
+          <pitch>64</pitch>
+          <tpc>18</tpc>
+          </Note>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="67" tpc="15"/>
-        <Note pitch="71" tpc="19"/>
-        <Note pitch="74" tpc="16"/>
-        <Note pitch="76" tpc="18"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
+        <Note>
+          <pitch>71</pitch>
+          <tpc>19</tpc>
+          </Note>
+        <Note>
+          <pitch>74</pitch>
+          <tpc>16</tpc>
+          </Note>
+        <Note>
+          <pitch>76</pitch>
+          <tpc>18</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="67" tpc="15"/>
-        <Note pitch="71" tpc="19"/>
-        <Note pitch="73" tpc="9"/>
-        <Note pitch="75" tpc="11"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
+        <Note>
+          <pitch>71</pitch>
+          <tpc>19</tpc>
+          </Note>
+        <Note>
+          <pitch>73</pitch>
+          <tpc>9</tpc>
+          </Note>
+        <Note>
+          <pitch>75</pitch>
+          <tpc>11</tpc>
+          </Note>
         </Chord>
       </Measure>
     <Measure number="2">
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="60" tpc="14"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>60</pitch>
+          <tpc>14</tpc>
+          </Note>
         </Chord>
-      <Beam id="1">
+      <Beam id="0">
         </Beam>
       <Chord>
-        <ticklen>120</ticklen>
-        <Beam>1</Beam>
-        <Note pitch="60" tpc="14"/>
+        <durationType>16th</durationType>
+        <Beam>0</Beam>
+        <Note>
+          <pitch>60</pitch>
+          <tpc>14</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>120</ticklen>
-        <Beam>1</Beam>
-        <Note pitch="62" tpc="16"/>
+        <durationType>16th</durationType>
+        <Beam>0</Beam>
+        <Note>
+          <pitch>62</pitch>
+          <tpc>16</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>120</ticklen>
-        <Beam>1</Beam>
-        <Note pitch="60" tpc="14"/>
+        <durationType>16th</durationType>
+        <Beam>0</Beam>
+        <Note>
+          <pitch>60</pitch>
+          <tpc>14</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>120</ticklen>
-        <Beam>1</Beam>
-        <Note pitch="62" tpc="16"/>
+        <durationType>16th</durationType>
+        <Beam>0</Beam>
+        <Note>
+          <pitch>62</pitch>
+          <tpc>16</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="69" tpc="17"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>69</pitch>
+          <tpc>17</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="65" tpc="13"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>65</pitch>
+          <tpc>13</tpc>
+          </Note>
         </Chord>
       <Chord>
         <track>1</track>
         <tick>1920</tick>
-        <ticklen>480</ticklen>
+        <durationType>quarter</durationType>
         <StemDirection>down</StemDirection>
         <Note>
           <track>1</track>
@@ -175,14 +261,14 @@ p, li { white-space: pre-wrap; }
           <tpc>19</tpc>
           </Note>
         </Chord>
-      <Beam id="2">
+      <Beam id="1">
         <track>1</track>
         <StemDirection>down</StemDirection>
         </Beam>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>2</Beam>
+        <durationType>eighth</durationType>
+        <Beam>1</Beam>
         <Note>
           <track>1</track>
           <pitch>58</pitch>
@@ -191,8 +277,8 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>2</Beam>
+        <durationType>eighth</durationType>
+        <Beam>1</Beam>
         <Note>
           <track>1</track>
           <pitch>57</pitch>
@@ -202,7 +288,7 @@ p, li { white-space: pre-wrap; }
       <Chord>
         <track>1</track>
         <tick>3360</tick>
-        <ticklen>480</ticklen>
+        <durationType>quarter</durationType>
         <StemDirection>down</StemDirection>
         <Note>
           <track>1</track>
@@ -213,22 +299,59 @@ p, li { white-space: pre-wrap; }
       </Measure>
     <Measure number="3">
       <Chord>
-        <ticklen>1920</ticklen>
+        <durationType>whole</durationType>
         <Slur type="start" number="1"/>
-        <Note pitch="67" tpc="15"/>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
         </Chord>
       <Rest>
         <offset x="0.50186" y="-2"/>
         <track>1</track>
         <tick>3840</tick>
-        <ticklen>240</ticklen>
+        <durationType>eighth</durationType>
         </Rest>
+      <Beam id="2">
+        <track>1</track>
+        </Beam>
+      <Chord>
+        <track>1</track>
+        <durationType>eighth</durationType>
+        <Beam>2</Beam>
+        <StemDirection>up</StemDirection>
+        <Note>
+          <track>1</track>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
+        </Chord>
+      <Chord>
+        <track>1</track>
+        <durationType>eighth</durationType>
+        <Beam>2</Beam>
+        <Note>
+          <track>1</track>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
+        </Chord>
+      <Chord>
+        <track>1</track>
+        <durationType>eighth</durationType>
+        <Beam>2</Beam>
+        <Note>
+          <track>1</track>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
+        </Chord>
       <Beam id="3">
         <track>1</track>
         </Beam>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
+        <durationType>eighth</durationType>
         <Beam>3</Beam>
         <StemDirection>up</StemDirection>
         <Note>
@@ -239,7 +362,7 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
+        <durationType>eighth</durationType>
         <Beam>3</Beam>
         <Note>
           <track>1</track>
@@ -249,7 +372,7 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
+        <durationType>eighth</durationType>
         <Beam>3</Beam>
         <Note>
           <track>1</track>
@@ -257,44 +380,10 @@ p, li { white-space: pre-wrap; }
           <tpc>15</tpc>
           </Note>
         </Chord>
-      <Beam id="4">
-        <track>1</track>
-        </Beam>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>4</Beam>
-        <StemDirection>up</StemDirection>
-        <Note>
-          <track>1</track>
-          <pitch>67</pitch>
-          <tpc>15</tpc>
-          </Note>
-        </Chord>
-      <Chord>
-        <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>4</Beam>
-        <Note>
-          <track>1</track>
-          <pitch>67</pitch>
-          <tpc>15</tpc>
-          </Note>
-        </Chord>
-      <Chord>
-        <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>4</Beam>
-        <Note>
-          <track>1</track>
-          <pitch>67</pitch>
-          <tpc>15</tpc>
-          </Note>
-        </Chord>
-      <Chord>
-        <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>4</Beam>
+        <durationType>eighth</durationType>
+        <Beam>3</Beam>
         <Note>
           <track>1</track>
           <pitch>67</pitch>
@@ -304,28 +393,34 @@ p, li { white-space: pre-wrap; }
       </Measure>
     <Measure number="4">
       <Chord>
-        <ticklen>960</ticklen>
+        <durationType>half</durationType>
         <Slur type="stop" number="1"/>
         <StemDirection>down</StemDirection>
-        <Note pitch="67" tpc="15"/>
+        <Note>
+          <pitch>67</pitch>
+          <tpc>15</tpc>
+          </Note>
         </Chord>
       <Chord>
-        <ticklen>480</ticklen>
-        <Note pitch="72" tpc="14"/>
+        <durationType>quarter</durationType>
+        <Note>
+          <pitch>72</pitch>
+          <tpc>14</tpc>
+          </Note>
         </Chord>
       <Rest>
         <offset x="0.19326" y="2"/>
-        <ticklen>480</ticklen>
         <small>1</small>
+        <durationType>quarter</durationType>
         </Rest>
-      <Beam id="5">
+      <Beam id="4">
         <track>1</track>
         </Beam>
       <Chord>
         <track>1</track>
         <tick>5760</tick>
-        <ticklen>240</ticklen>
-        <Beam>5</Beam>
+        <durationType>eighth</durationType>
+        <Beam>4</Beam>
         <StemDirection>up</StemDirection>
         <Note>
           <track>1</track>
@@ -335,8 +430,8 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>5</Beam>
+        <durationType>eighth</durationType>
+        <Beam>4</Beam>
         <Note>
           <track>1</track>
           <pitch>67</pitch>
@@ -345,8 +440,8 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>5</Beam>
+        <durationType>eighth</durationType>
+        <Beam>4</Beam>
         <Note>
           <track>1</track>
           <pitch>67</pitch>
@@ -355,8 +450,8 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
-        <Beam>5</Beam>
+        <durationType>eighth</durationType>
+        <Beam>4</Beam>
         <Note>
           <track>1</track>
           <pitch>67</pitch>
@@ -365,7 +460,7 @@ p, li { white-space: pre-wrap; }
         </Chord>
       <Chord>
         <track>1</track>
-        <ticklen>240</ticklen>
+        <durationType>eighth</durationType>
         <StemDirection>down</StemDirection>
         <Note>
           <track>1</track>
@@ -377,9 +472,9 @@ p, li { white-space: pre-wrap; }
         <offset x="0.302779" y="-1"/>
         <track>1</track>
         <tick>7200</tick>
-        <ticklen>480</ticklen>
+        <durationType>quarter</durationType>
         </Rest>
       </Measure>
     </Staff>
-  <cursorTrack>1</cursorTrack>
+  <cursorTrack>-1</cursorTrack>
   </museScore>
