@@ -1,3 +1,6 @@
+13.nov. (ws)
+      - save dirty state in session file
+      - show dialog, when a session file is found
 12.nov. (lv)
       - export of MusicXML <metronome>
 9.nov. (lv)
